# 3D_Segmentation_On_Pallet

./: CMakeLists.txt  nturvizconfig.rviz  package.xml  readme.md
data/: 2019-07-10-01.bag
launch/: palletlauncher.launch
msg/: pallet_report_msg.msg  pallet_report_stamped_msg.msg
src/: Pallet_Unloader.cpp  main copy.py  main.py  palletsubscriber.cpp  template.pcd
srv/: pallet_report_srv.srv  which_pallet_srv.srv
